@@ -39,7 +39,6 @@ import numpy
 from PyQt4 import QtCore
 from PyQt4 import QtGui
 
-
 import vitables.utils
 import vitables.plugin_utils
 from vitables.vtsite import PLUGINSDIR
